--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -1,15 +1,15 @@
 
-<div class="tc pv4">
-  <div class="tc pv2 light-gray">
-    <a class="light-gray  dim link pv2 nowrap" href="https://www.paradox.com">英文官网</a> | 
-    <a class="light-gray dim link pv2 nowrap" href="https://www.senboll.com">中文官网</a> | 
-    <a class="light-gray dim link pv2 nowrap" href="http://support.senboll.com:8888/help/documentation">文档中心</a> | 
-    <a class="light-gray dim link pv2 nowrap" href="http://support.senboll.com:8888">资料服务器</a> | 
-    <a class="light-gray dim link pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
-    <a class="light-gray dim link pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
+<div class="tc pv4 mid-gray">
+  <div class="tc pv2">
+    <a class="black dim link pv2 nowrap" href="https://www.paradox.com">英文官网</a> | 
+    <a class="black dim link pv2 nowrap" href="https://www.senboll.com">中文官网</a> | 
+    <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/help/documentation">文档中心</a> | 
+    <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888">资料服务器</a> | 
+    <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
+    <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
   </div>
-  <div class="light-silver tc pv1">全国服务热线：400-002-5577</div> 
-  <div class="light-silver tc pv1">©<span id="year"></span>年著作权，盛波尔科技所有权。</div>  
+  <div class="tc pv1">全国服务热线：400-002-5577</div> 
+  <div class="tc pv1">©<span id="year"></span>年著作权，盛波尔科技所有权。</div>  
 </div>
 
 <script>
