--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-primary-color-dark ph4-ns w-100 f7 f6-l bt b--dark-gray relative z-999" role="contentinfo">
+<footer class="bg-light-gray ph4-ns w-100 f7 f6-l bt b--light-gray relative z-999" role="contentinfo">
      
   {{ partial "custom-footer.html" }}  
 
