--- a/layouts/partials/site-search.html
+++ b/layouts/partials/site-search.html
@@ -2,7 +2,7 @@
   <fieldset class="bn mt1">
     <label class="clip dn" for="search-input">Search</label>
     <input type="search" id="search-input" 
-      class="br3 ba b--dark-gray bg-left f5 input-reset lh-solid mt0-ns pl4 pv2 white w-100" 
+      class="br3 ba black b--moon-gray bg-left f5 input-reset lh-solid mt0-ns pl4 pv2 w-100" 
       placeholder="搜索全站" name="search-input" value="" 
       style="background: transparent url('{{$.Site.BaseURL}}/images/icon-search.png') no-repeat 8px 8px /16px 16px;">
   </fieldset>
