--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,7 +1,7 @@
 <!-- TOCs need to be declared explicitly in the front matter of content/*.md -->
 <aside id="right-container" class="fixed-l- fixed-lTK f6 ph3-l nested-list-reset nested-links nested-copy-line-height overflow-x-hidden overflow-y-auto dn-lx">
 	{{ if .Params.toc }}
-		<p class="f5 fw6 pv2 bb b--moon-gray mid-gray mb2 w-100-">本文内容</p>
+		<div class="f5 fw6 pb2 bb b--moon-gray mid-gray mb2">本文内容</div>
   		{{ .TableOfContents }}
 	{{ end }}
 	
