--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -45,7 +45,7 @@
           
 
   </head>
-  <body class="min-vh-100 flex flex-column ma0 sans-serif {{ with getenv "HUGO_ENV" }} {{ . }}{{ end }} bg-white dark-gray">
+  <body class="flex flex-column ma0 sans-serif {{ with getenv "HUGO_ENV" }} {{ . }}{{ end }} bg-white dark-gray"  style="min-height: calc(100vh - 215px);">
     {{ block "nav" . }}{{ partial "site-nav.html" . }}{{ end }}
     {{ block "header" . }}{{ end }}
     <main role="main" class="content-with-sidebar pb0-ns db w-100 flex-auto">
