--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,19 +3,19 @@
   <div class="order-3 bg-white black db dn-l w-100 ">
       {{- partial "nav-links-docs-mobile.html" . -}}
   </div>
-  <article class="min-vh-100 w-100-l bg-white" style="margin-right: auto; margin-left: auto;">
+  <article class="w-100-l bg-white" style="margin-right: auto; margin-left: auto;" style="min-height: calc(100vh - 215px);">
 
     <div class="flex-l">
 
-      <div class="pb5 pb6-ns pt5-ns order-2 w-100 w-20-l ph5-m right-0-l dn db-l bg-near-white-" style="max-width: 320px; min-width: 320px;">
+      <div class="pb5 pb6-ns pt4-ns order-2 w-100 w-20-l ph5-m right-0-l dn db-l" style="max-width: 320px; min-width: 320px; position: sticky; top: 4rem; max-height: calc(100vh - 4rem);">
         {{- partial "toc.html" . -}}
       </div>
 
-      <div id="left-container" class="pb5 pb6-ns pt1 pt5-ns order-0 w-20-l dn db-l top-0 ph2 br b--light-gray" style="max-width: 320px; min-width: 320px;">
+      <div id="left-container" class="pb5 pb6-ns pt1 pt4-ns order-0 w-20-l dn db-l top-0 ph2 br b--light-gray" style="max-width: 320px; min-width: 320px; position: sticky; top: 4rem; max-height: calc(100vh - 4rem);">
         {{ partial "nav-links-docs.html" . }}
       </div>
       
-      <div class="ph3 pb5 pb6-ns pt1 pt5-ns order-1 center- w-100 w-auto-l ph0 ph3-ns mid-gray nested-copy-line-height no-underline nested-links nested-img nested-copy-seperator nested-blockquote mt0-ns">
+      <div class="ph3 pb5 pb6-ns pt1 pt4-ns order-1 center- w-100 w-auto-l ph0 ph3-ns mid-gray nested-copy-line-height no-underline nested-links nested-img nested-copy-seperator nested-blockquote mt0-ns">
         <div class="documentation-copy center w-100">
           <div id="readout" class="fixed right-0 bottom-0">
           </div>
@@ -25,7 +25,7 @@
       </div>
 
     </div>
-    <a class="goTop right-2-l bottom-2-l right-2 bottom-2 z-9999"></a>
+    <a class="goTop right-2-l bottom-2-l right-2 bottom-2 z-999"></a>
   </article>  
 
   <!-- <div class="w-100">
