--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -1,10 +1,16 @@
 
-<div class="dn-l flex items-center justify-between w-100 h-auto pv1">
+<div class="dn-l flex items-center justify-between w-100 h-auto pv2">
   <button id="mobile-menu-button" onclick="mobileMenuButtonOnclick()" aria-expanded="false" aria-hidden="false" 
-    class="querybtn dib dn-l f4 tc db pl3 pt1- black bg-transparent bn">
+    class="querybtn dib dn-l f3 tc db pl3 black bg-transparent bn">
+    <svg class="menu-list-open" fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32px" height="32px">
+      <path d="M 4 7 L 4 9 L 28 9 L 28 7 Z M 4 15 L 4 17 L 28 17 L 28 15 Z M 4 23 L 4 25 L 28 25 L 28 23 Z"></path>
+    </svg>
+    <svg class="menu-list-close" fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32px" height="32px">
+      <path d="M 7.21875 5.78125 L 5.78125 7.21875 L 14.5625 16 L 5.78125 24.78125 L 7.21875 26.21875 L 16 17.4375 L 24.78125 26.21875 L 26.21875 24.78125 L 17.4375 16 L 26.21875 7.21875 L 24.78125 5.78125 L 16 14.5625 Z"></path>
+    </svg>
   </button>
   <a id="mobile-menu-logo" href="https://www.senboll.com" aria-hidden="false" class="link dib db dn-l tc h-mid w-80- flex w-auto ph5-">
-        {{ partial "svg/logo.svg" (dict "size" "30px" "class" "v-mid") }}
+        {{ partial "svg/logo.svg" (dict "size" "36px" "class" "v-mid") }}
   </a>
   <!-- 
   <div id="mobile-search-input" aria-hidden="true" class="db dib-ns pl3 w-90 pv2">
@@ -14,7 +20,7 @@
   </div> -->
 
   <button id="mobile-search-button" onclick="mobileSearchButtonOnclick()" aria-expanded="false" 
-    class="querybtn v-mid link dib dn-l f4 tr db pr3 pt2 black bg-transparent bn">
+    class="querybtn v-mid link dib dn-l f4 tr db pr3 black bg-transparent bn">
   </button>
   <!-- <button class="js-toggle flex-auto dib dn-l f6 tc db mt4-ns ph3 pv2 link white bg-primary-color-dark hover-bg-primary-color ba b--white-40 w-auto" data-target=".docsmenu">文档目录</button> -->
 </div>
