--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -1,7 +1,7 @@
 {{ $currentPage := . }}
 
 
-<div class="w-100 shadow-1 sticky z-999 bg-white top-0">
+<div class="w-100 shadow-1 sticky- z-999 bg-white top-0-">
   <nav class="flex" role="navigation">
   
     <div class="flex items-center ph3 dn-lx dib-l mr-auto" >
