--- a/assets/output/css/app.css
+++ b/assets/output/css/app.css
@@ -2268,20 +2268,21 @@ img { max-width: 100%; }
   .relative-ns  { position: relative; }
   .absolute-ns  { position: absolute; }
   .fixed-ns  { position: fixed; }
+  .sticky-ns  { position: sticky; }
 }
 @media screen and (min-width: 30em) and (max-width: 60em) {
   .static-m { position: static; }
   .relative-m  { position: relative; }
   .absolute-m  { position: absolute; }
   .fixed-m  { position: fixed; }
-  .sticky-top  { top: 45px; bottom: 0px; overflow: auto; }
+  .sticky-m  { position: sticky; }
 }
 @media screen and (min-width: 60em) {
   .static-l { position: static; }
   .relative-l  { position: relative; }
   .absolute-l  { position: absolute; }
   .fixed-l  { position: fixed; }
-  .sticky-top  { top: 58px; bottom: 0px; overflow: auto; }
+  .sticky-l  { position: sticky; }
 }
 /*
 
