--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -20,7 +20,7 @@
   </div> -->
 
   <button id="mobile-search-button" onclick="mobileSearchButtonOnclick()" aria-expanded="false" 
-    class="querybtn v-mid link dib dn-l f4 tr db pr3 black bg-transparent bn">
+    class="querybtn v-mid link dib dn-l f4 tr db pr3 black bg-transparent bn b">
   </button>
   <!-- <button class="js-toggle flex-auto dib dn-l f6 tc db mt4-ns ph3 pv2 link white bg-primary-color-dark hover-bg-primary-color ba b--white-40 w-auto" data-target=".docsmenu">文档目录</button> -->
 </div>
