--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -9,8 +9,9 @@
       <path d="M 7.21875 5.78125 L 5.78125 7.21875 L 14.5625 16 L 5.78125 24.78125 L 7.21875 26.21875 L 16 17.4375 L 24.78125 26.21875 L 26.21875 24.78125 L 17.4375 16 L 26.21875 7.21875 L 24.78125 5.78125 L 16 14.5625 Z"></path>
     </svg>
   </button>
-  <a id="mobile-menu-logo" href="https://www.senboll.com" aria-hidden="false" class="link dib db dn-l tc h-mid w-80- flex w-auto ph5-">
-        {{ partial "svg/logo.svg" (dict "size" "36px" "class" "v-mid") }}
+  <a id="mobile-menu-logo" href="{{.URL}}" aria-hidden="false" class="link dib db dn-l tc h-mid w-80- flex w-auto ph5-">
+    <div class="ph3 f5 b black">文档中心</div>
+        {{/*  {{ partial "svg/logo.svg" (dict "size" "36px" "class" "v-mid") }}  */}}
   </a>
   <!-- 
   <div id="mobile-search-input" aria-hidden="true" class="db dib-ns pl3 w-90 pv2">
