--- a/layouts/partials/head-additions.html
+++ b/layouts/partials/head-additions.html
@@ -1,5 +1,5 @@
 <!-- EMPTY -->
 <header class="bg-primary-color-dark ph4 tc" role="banner">
-    <link href="{{.Site.BaseURL}}/css/common.css" rel="stylesheet" type="text/css">
-    <link href="{{.Site.BaseURL}}/css/jquery-accordion-menu.css" rel="stylesheet" type="text/css">
+    <link href="{{$.Site.BaseURL}}/css/common.css" rel="stylesheet" type="text/css">
+    <link href="{{$.Site.BaseURL}}/css/jquery-accordion-menu.css" rel="stylesheet" type="text/css">
 </header>
