--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -13,7 +13,7 @@
         {{ range .Site.Menus.global }}
           <li class="f5 dib tc pr4" role="menuitem">
               {{/* TODO: Create an "Global" active class to show which site one is currently at */}}
-            <a href="{{ .URL }}" class="dim link{{ if $currentPage.IsMenuCurrent "global" . }} gray {{else}} mid-gray {{ end }}">
+            <a href="{{ $.Site.BaseURL }}" class="dim link{{ if $currentPage.IsMenuCurrent "global" . }} gray {{else}} mid-gray {{ end }}">
               {{ .Name }}
                 {{/* using ".Post" from the menu system to determine if we should show an icon for external links */}}
               {{ $post_status := printf "%s" .Post }}
