--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -5,12 +5,12 @@
   {{ $.Scratch.Set "scripts" . }}    
 {{end}} 
 
-<script type="text/javascript" src="{{ .Site.BaseURL }}/js/jquery.min.js" crossorigin="anonymous" defer=""></script>
+<script type="text/javascript" src="{{ $.Site.BaseURL }}/js/jquery.min.js" crossorigin="anonymous" defer=""></script>
 
-<script type="text/javascript" src="{{ .Site.BaseURL }}/js/common.js" crossorigin="anonymous" defer=""></script>
-<script type="text/javascript" src="{{ .Site.BaseURL }}/js/md5.js" crossorigin="anonymous" defer=""></script>
-<script type="text/javascript" src="{{ .Site.BaseURL }}/js/previewImage.js" crossorigin="anonymous" defer=""></script>
-<script type="text/javascript" src="{{ .Site.BaseURL }}/js/jquery-accordion-menu.js" crossorigin="anonymous" defer=""></script>
+<script type="text/javascript" src="{{ $.Site.BaseURL }}/js/common.js" crossorigin="anonymous" defer=""></script>
+<script type="text/javascript" src="{{ $.Site.BaseURL }}/js/md5.js" crossorigin="anonymous" defer=""></script>
+<script type="text/javascript" src="{{ $.Site.BaseURL }}/js/previewImage.js" crossorigin="anonymous" defer=""></script>
+<script type="text/javascript" src="{{ $.Site.BaseURL }}/js/jquery-accordion-menu.js" crossorigin="anonymous" defer=""></script>
 
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
