--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -2,7 +2,9 @@
 <aside id="right-container" class="fixed-l- fixed-lTK f6 ph3-l nested-list-reset nested-links nested-copy-line-height overflow-x-hidden overflow-y-auto dn-lx">
 	{{ if .Params.toc }}
 		<div class="f5 fw6 pb2 bb b--moon-gray mid-gray mb2">本文内容</div>
-  		{{ .TableOfContents }}
+		<div style="max-height: calc(100vh - 120px); overflow-y: auto;">
+			{{ .TableOfContents }}
+		</div>
 	{{ end }}
 	
 	{{- partial "previous-next-links-in-section.html" . -}}
