--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -3,7 +3,7 @@
   <div class="tc pv2">
     <a class="black dim link pv2 nowrap" href="https://www.paradox.com">英文官网</a> | 
     <a class="black dim link pv2 nowrap" href="https://www.senboll.com">中文官网</a> | 
-    <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/help">文档中心</a> | 
+    <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/docs">文档中心</a> | 
     <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888">资料服务器</a> | 
     <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
     <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
