--- a/assets/output/css/app.css
+++ b/assets/output/css/app.css
@@ -4708,7 +4708,7 @@ h6:hover .header-link {
 .algolia-autocomplete .algolia-docsearch-suggestion--subcategory-column:before{content:"";position:absolute;display:block;top:0;height:100%;width:1px;background:#ddd;right:0}
 .algolia-autocomplete .algolia-docsearch-suggestion--subcategory-inline{display:none}
 .algolia-autocomplete .algolia-docsearch-suggestion--title{margin-bottom:4px;color:#02060c;font-size:.9em;font-weight:700}
-.algolia-autocomplete .algolia-docsearch-suggestion--text{display:block;line-height:1.2em;font-size:.85em;color:#63676d}
+.algolia-autocomplete .algolia-docsearch-suggestion--text{display:blockline-height:1.2em;font-size:.85em;color:#63676d}
 .algolia-autocomplete .algolia-docsearch-suggestion--no-results{width:100%;padding:8px 0;text-align:center;font-size:1.2em}
 .algolia-autocomplete .algolia-docsearch-suggestion--no-results:before{display:none}
 .algolia-autocomplete .algolia-docsearch-suggestion code{padding:1px 5px;font-size:90%;border:none;color:#222;background-color:#ebebeb;border-radius:3px;font-family:Menlo,Monaco,Consolas,Courier New,monospace}
