--- a/layouts/shortcodes/button.html
+++ b/layouts/shortcodes/button.html
@@ -1,6 +1,6 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
 
-<button class="bw0 f6 br3 bg-moon-gray">
+<button class="ba f6 br4">
 	{{- .Inner | markdownify -}}
 </button>
 
