--- a/layouts/shortcodes/button.html
+++ b/layouts/shortcodes/button.html
@@ -1,6 +1,6 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
 
-<button class="ba f6 br4">
+<button class="ba f6 br4 b--gray">
 	{{- .Inner | markdownify -}}
 </button>
 
