--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -5,7 +5,7 @@
     <a class="black dim link pv2 nowrap" href="https://www.senboll.com">中文官网</a> | 
     <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/docs">文档中心</a> | 
     <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/files">资料服务器</a> | 
-    <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
+    <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/photos">案例相册</a> | 
     <a class="black dim link pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
   </div>
   <div class="tc pv1">全国服务热线：400-002-5577</div> 
